# qmtl

./: .bandit  .cursorrules  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .qmtl_tagmap.json  AGENTS.md  BACKTEST_ENHANCEMENTS_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  PYLANCE_RUNTIME_ISSUES.md  README.md  alert_rules.yml  architecture.md  babel.cfg  conftest.py  dag-manager.md  docker-compose.yml  gateway.md  last_pytest_output.txt  main.py  mkdocs.yml  pyproject.toml  pytest.ini  qmtl.db
.codex_runs/: 755.pass1.changes.txt  755.pass1.last.txt  755.pass1.verify.txt  761.pass1.console.txt  761.pass1.last.txt  761.pass1.verify.txt  762.pass1.changes.txt  762.pass1.console.txt  762.pass1.last.txt  762.pass1.verify.txt  763.pass1.console.txt  763.pass1.last.txt  763.pass2.console.txt  763.pass2.last.txt  763.pass2.verify.txt
.github/: CODEOWNERS  CONTRIBUTING.md  COPILOT_INSTRUCTIONS.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_DRAFTS/: 001-rfc-exchange-node-sets.md  002-implement-execution-layer-nodes.md  003-node-set-ccxt-generic-spot.md  004-node-set-binance-futures-usdtm.md  005-gateway-fills-webhook-and-kafka.md  006-runner-pretrade-chain-toggle-and-metrics.md  007-event-schemas-and-schema-registry.md  008-portfolio-scope-option-and-cross-strategy-risk.md
.github/ISSUE_TEMPLATE/: bug.md
.github/issues/: README.md  core-loop-contract-draft.md  pandas_to_polars_migration.md
.github/workflows/: ci.yml  doc-sync.yml  docs-link-check.yml  docs.yml  evaluation-store-retention.yml  ex-post-failure-report.yml  live-monitoring-schedule.yml  mutation-pilot.yml  override-rereview-queue.yml  policy-diff-history-report.yml  policy-diff-regression.yml  qmtl-subtree-sync.yml  validation-slo-report.yml  world_smoke.yml
.github/workflows.disabled/: docs-dashboard.yml  docs.yml  world_smoke.yml
.kiro/: README.md
.kiro/hooks/: python-docs-sync.kiro.hook  (+2 more)
.qmtl_snapshots/: f4aa3c6a83065055892dbf3cdaa51f349c6aa98eda72e002f4e0b47df70db30e_120.snap.json
.venv311/: pyvenv.cfg
alphadocs/: Kyle-Obizhaeva_non-linear_variation.md
codex_prompts/: qmtl_issue_runner.prompt.md
docs/: CHANGELOG.md  MAINTENANCE_SCHEDULE.md  _inventory.md  agents-instructions.md  alpha_usage_tracking.md  alphadocs_registry.md  alphadocs_registry.yml  backfill.md  brokerage_models.md  canary_rollout.md  dashboard.json  e2e_testing.md  enhanced_execution_modeling.md  enhanced_validation.md  faq.md  i18n_audit_report.md  index.md  monitoring.md  sdk_docker.md  sdk_tutorial.md  strategy-dag.md  strategy_workflow.md  tagging-guidelines.md  tags.md  templates.md  timing_controls.md
docs_archive/: rewrite_architecture_docs.md
examples/: README.md  ccxt_seamless_provider.py  correlation_strategy.py  cross_market_lag_strategy.py  dagmgr.yml  extensions_combined_strategy.py  gateway.yml  general_strategy.py  generators_example.py  indicators_strategy.py  microprice_priority_strategy.py  microstructure_signals.py  mode_switch_example.py  nautilus_catalog_example.py  qmtl.yml  recorder_strategy.py  seamless_data_provider_examples.py  tag_query_aggregation.py  tag_query_strategy.py  transforms_strategy.py
model_cards/: s-eval.yml
notebooks/: strategy_analysis_example.ipynb
operations/: docker-compose.dev.override.yml  docker-compose.full.yml  docker-compose.qmtl.yml
qmtl/: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  __main__.py  _compat.py  alert_rules.yml  architecture.md  cli.py  common.py  config.py  dag-manager.md  docker-compose.yml  indicators.py  io.py  mkdocs.yml  model_cards.py  pipeline.py  pyproject.toml  scaffold.py  spec.py
scripts/: __init__.py  audit_architecture_contracts.py  audit_architecture_semantics.py  audit_docs_language.py  backfill_risk_snapshots.py  benchmark_nautilus_integration.py  bootstrap.py  bootstrap.sh  build_agent_instructions.py  check_design_drift.py  check_doc_sync.py  check_docs_links.py  check_i18n_core_parity.py  check_import_cycles.py  check_no_strategies_import.py  check_sdk_layers.py  cleanup_backups.py  create_random_gpt5pro_idea.py  exit_engine_worker.py  generate_ex_post_failure_report.py  generate_live_monitoring_report.py  generate_override_rereview_report.py  generate_validation_report.py  import_cycles_baseline.json  inject_sla_violation.py  lease_recover.py  lint_dsn_keys.py  lint_risk_hub_snapshot.py  list_alpha_status.py  list_unused_alphas.py  live_monitoring_worker.py  manage_alphadocs.py  package_monitoring_bundle.py  package_smoke.sh  policy_diff.py  policy_diff_batch.py  policy_diff_store_history.py  policy_scenario_check.py  policy_snapshot.py  policy_snapshot_diff.py  (+18 more)
sdk/: metrics.py
site/: 404.html  alphadocs_registry.yml  index.html
spec/: binance_input.md  iterations.md  unregistered_alpha_test_refactor.md  기능_추가_계획서.md
strategies/: AGENTS.md  README.md  config.example.yml  config.py  distillation_demo.py  qmtl.yml  registry.py  strategy.py
tests/: conftest.py  docker-compose.e2e.yml  docker-compose.yml  dummy_fetcher.py  sample_strategy.py  test_activation_manager_default.py  test_activation_manager_freeze_drain.py  test_alerts.py  test_arrow_cache.py  test_arrow_slices.py  test_backfill.py  test_backfill_engine.py  test_backpressure_guard.py  test_binance_fetcher.py  test_binance_history_strategy.py  test_binance_integration.py  test_brokerage_backtest_parity.py  test_brokerage_bracket.py  test_brokerage_buying_power_margin.py  test_brokerage_cashbook_multicurrency.py  test_brokerage_client_fake.py  test_brokerage_client_fake_oco.py  test_brokerage_exchange_holidays.py  test_brokerage_extras.py  test_brokerage_ibkr_fee.py  test_brokerage_interest.py  test_brokerage_maker_taker_fee.py  test_brokerage_model.py  test_brokerage_models.py  test_brokerage_oco.py  test_brokerage_orders_tif.py  test_brokerage_profile_initializer.py  test_brokerage_settlement_defer.py  test_cache_perf.py  test_callbacks.py  test_ccxt_brokerage_profile.py  test_ccxt_nodeset_attach_exec.py  test_ccxt_spot_nodeset.py  test_check_doc_sync.py  test_cli.py  (+111 more)
tools/: taglint.py
(+2993 files in other folders)
